--- a/leftvideobig.css
+++ b/leftvideobig.css
@@ -3,8 +3,8 @@
 
 @media screen and (min-width: 72em) { /* If not "phone mode" */
     /* Main function */
-    /*#main-room .left_section { padding: 0; margin-top: 0; }*/
-    /*#main-room .left_section  .main-player-wrapper { display: initial; }*/
+    #main-room .left_section { padding: 0; margin-top: 0; }
+    #main-room .left_section  .main-player-wrapper { display: initial; }
     #main_player { width: 100%; max-width: 60%; min-width: 600px; /*float: right;*/ }
 
     /* Buttons fix */
