--- a/leftvideobig.css
+++ b/leftvideobig.css
@@ -5,7 +5,7 @@
     /* Main function */
     #main-room .left_section { padding: 0; margin-top: 0; }
     #main-room .left_section  .main-player-wrapper { display: initial; }
-    #main_player { width: 100%; max-width: 60%; min-width: 400px; /*float: right;*/ }
+    #main_player { width: 100%; max-width: 50%; min-width: 400px; float: right; }
 
     /* Buttons fix */
     #main-room .left_section #main_player .play-song-link-container { bottom: -3.5rem; }
@@ -32,5 +32,5 @@
     }
     #main_player .player_header span.edit-room { padding: 1px 0 0 4px; float: left; width: initial; }
     #main_player .player_header span.edit-room i { position: initial; }
-    #main_player .player_header span.skip-el { position: absolute; bottom: 0; right: initial; /*float: left;*/ }
+    #main_player .player_header span.skip-el { position: absolute; bottom: 0; right: initial; float: left; }
 }
