--- a/dubtrack-xaring.css
+++ b/dubtrack-xaring.css
@@ -34,7 +34,7 @@
 @import url("https://frosolf.github.io/siteimgs.css"); /* Background images (Parted from mixercore) */
 @import url("https://frosolf.github.io/usrprefs.css"); /* User-specific settings (Better chat improves some of this) */
    /* Modifications by Xaring */
-@import url("https://xaring.github.io/dubtrack-xaring.css"); /* Left side video player with a normal size */
-#main-room:not(.fullscreenParent) {max-width: 110vw;} 
+@import url("https://xaring.github.io/leftvideobig.css"); /* Left side video player with a normal size */
+/* #main-room:not(.fullscreenParent) {max-width: 110vw;} 
 #main-room:not(.fullscreenParent) .left_section { width: 106vw; } 
 #main-room:not(.fullscreenParent) #main_player .player_container { height: 60vh; } */
